<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
   <PreferenceCategory
            android:title="@string/filter_preferences_title">
            
        <CheckBoxPreference
                android:key="@string/favorite_filter"
                android:title="@string/favorite_filter_title"
                android:summary="@string/favorite_filter_summary" 
                />
        <CheckBoxPreference
				android:key="@string/bikes_filter"
				android:title="@string/bikes_filter_title"
				android:summary="@string/bikes_filter_summary" 
				/>
        <CheckBoxPreference
				android:key="@string/slots_filter"
				android:title="@string/slots_filter_title"
				android:summary="@string/slots_filter_summary" 
				/>
		<CheckBoxPreference 
            android:key="enable_filter_by_distance"
			android:title="@string/enable_distance_filter_title" 
            android:summary="@string/enable_distance_filter_summary"
            android:defaultValue="true"
        />
		<fr.vcuboid.filter.SeekBarPreference
                android:key="customPref"
                android:defaultValue="32"
                android:title="@string/distance_filter_title" 
                android:summary="@string/distance_filter_summary"
                android:dependency="enable_filter_by_distance" />
    </PreferenceCategory>
</PreferenceScreen>
