<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_root"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <include layout="@layout/actionbar" />

	<fr.openbike.ui.widget.DashboardLayout
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"
		android:background="#FFFFFFFF">

		<Button android:id="@+id/home_btn_list" style="@style/DashboardButton"
			android:text="@string/btn_list" android:drawableTop="@drawable/home_btn_list" />
		<Button android:id="@+id/home_btn_map" style="@style/DashboardButton"
			android:text="@string/btn_map" android:drawableTop="@drawable/home_btn_map" />
		<Button android:id="@+id/home_btn_favorite" style="@style/DashboardButton"
			android:text="@string/btn_favorite" android:drawableTop="@drawable/home_btn_favorite" />
		<Button android:id="@+id/home_btn_filters" style="@style/DashboardButton"
			android:text="@string/btn_filters" android:drawableTop="@drawable/home_btn_filters" />
		<Button android:id="@+id/home_btn_search" style="@style/DashboardButton"
			android:text="@string/btn_search" android:drawableTop="@drawable/home_btn_search" />
		<Button android:id="@+id/home_btn_settings" style="@style/DashboardButton"
			android:text="@string/btn_settings" android:drawableTop="@drawable/home_btn_settings" />

	</fr.openbike.ui.widget.DashboardLayout>
</LinearLayout>
