<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content">
	
	<com.markupartist.android.widget.ActionBar 
		xmlns:app="http://schemas.android.com/apk/res/fr.openbike.android"
    	android:id="@+id/actionbar"
    	app:title="@string/station_list"
    	style="@style/ActionBar" />
	
	<RelativeLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:id="@+id/search_results"
		android:visibility="gone"
		>
		<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:textSize = "16dip"
				android:background="#8b8b8b"
				android:text="@string/search_results"
				android:padding="8dip" />
	</RelativeLayout>
	
	<RelativeLayout  
			  android:id="@+id/mainRL" 
			  android:layout_width="wrap_content" 
              android:layout_height="wrap_content"
              android:layout_weight="1.0"
              		>
	<ListView
		android:id="@android:id/android:list"
		android:choiceMode="singleChoice"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:clickable="true"
		android:cacheColorHint="#898989"
		/>
		
		            <!---->
		
		<TextView android:id="@+id/empty"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:gravity="center"
               android:visibility = "gone"
               android:textSize = "16dip"
               android:text="@string/no_stations"/>
               
        <TextView android:id="@+id/loading"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:gravity="center"
               android:visibility = "gone"
               android:textSize = "16dip"
               android:text="@string/loading_list"/>
               
		<RelativeLayout 
			  android:layout_above="@id/mainRL"
			  android:id="@+id/updating"
			  android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:visibility="invisible">  
              <LinearLayout 
              	android:layout_width="fill_parent" 
              	android:layout_height="wrap_content" 
              	android:background="#AA111111"
              	android:padding="8dip"
              	android:gravity="center">       
				<ProgressBar 
					android:id="@+id/progress"
					android:layout_width="24dip" 
                	android:layout_height="24dip"
                	android:layout_marginTop="6dip"
                	android:layout_marginBottom="6dip"
               		android:indeterminate="true"/>
                	<TextView 	
                		android:textColor="#FFFFFF"
                		android:shadowColor="#000000"
		  				android:shadowDx="0"
		  				android:shadowDy=".5"
		  				android:shadowRadius="1"
						android:layout_toRightOf="@id/progress"
						android:layout_marginLeft="8dip"
						android:text="@string/updating"
						android:layout_width="wrap_content" 
               			android:layout_height="wrap_content"
                		android:layout_alignParentTop="true"/>
 			</LinearLayout>
 		</RelativeLayout> 
	</RelativeLayout> 
</LinearLayout>
