<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_root_view"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
  	android:background = "#FFFFFFFF"
    >
    
    <com.markupartist.android.widget.ActionBar 
		xmlns:app="http://schemas.android.com/apk/res/fr.openbike.android"
    	android:id="@+id/actionbar"
    	app:title="@string/station_details"
    	style="@style/ActionBar" />
    
	<LinearLayout
	    android:id="@+id/banner"
	    android:layout_width="fill_parent"
	    android:layout_height="50dp"
	    android:orientation="horizontal"
	    android:background="#373737"
	    android:paddingRight="5dip"
	    android:gravity="center_vertical">
	    
	   <LinearLayout
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:orientation="vertical"
	         >
	
	        <LinearLayout
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal">
	            
	    <TextView android:id="@+id/name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingLeft="5dp"
	        android:singleLine="true"
	        android:ellipsize="end"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textStyle="bold"
	        android:shadowColor="#BB000000"
	        android:shadowRadius="2.75"
	        android:layout_gravity="center_vertical"
	        /> 
	</LinearLayout> 
	</LinearLayout> 
	    <CheckBox
	        android:id="@+id/favorite"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        style="?android:attr/starStyle" />
	         
	</LinearLayout> 
	
	<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	    android:id="@+id/scroller"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:fillViewport="true" >
	    
	            <LinearLayout
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:orientation="vertical">
	            
	    <TextView 
			android:id = "@+id/distance" 
			android:layout_width = "wrap_content"
			android:layout_height = "wrap_content" 
			android:textSize = "16dip"
			android:padding = "5dp" 
			android:layout_gravity="right"
			android:visibility="gone"
			android:textColor = "#cccccc" />
			
			<LinearLayout
				android:id = "@+id/open_layout"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:orientation="horizontal"
	            android:padding = "10dp" >
	            
	            <LinearLayout
	            	android:layout_width="fill_parent"
	            	android:layout_height="wrap_content"
	            	android:orientation="vertical"
	            	android:gravity="center"
	           		android:layout_weight="1">
	            
		<ImageView 
			android:id = "@+id/bike_sign"
			android:src = "@drawable/bike_sign"
	   		android:layout_width="wrap_content"
	   		android:layout_height="wrap_content"
	   		/>
	   
	    <TextView 
			android:id = "@+id/bikes"
			android:background = "@drawable/empty_sign"
			android:layout_width = "wrap_content"
			android:layout_height = "wrap_content" 
			android:gravity="center"
			android:textSize = "16dip"
			android:textStyle="bold"
			android:textColor="#ffffff"
			android:padding = "5dp" />
					</LinearLayout>
			
	            <LinearLayout
	            	android:layout_width="fill_parent"
	            	android:layout_height="wrap_content"
	            	android:orientation="vertical"
	            	android:gravity="center"
	           		android:layout_weight="1">
	            
					<ImageView 
						android:id = "@+id/parking_sign"
						android:src = "@drawable/parking_sign"
				   		android:layout_width="wrap_content"
				   		android:layout_height="wrap_content"
				   		/>
				   
				    <TextView 
						android:id = "@+id/slots"
						android:background = "@drawable/empty_sign"
						android:layout_width = "wrap_content"
						android:layout_height = "wrap_content"
						android:gravity="center"
						android:textSize = "16dip"
						android:textStyle="bold"
						android:textColor="#ffffff"
						android:padding = "5dp" 
						/>
				</LinearLayout>
			</LinearLayout>
			
						 <LinearLayout
				 	android:id = "@+id/closed_layout"
	            	android:layout_width="fill_parent"
	            	android:layout_height="wrap_content"
	            	android:orientation="vertical"
	            	android:gravity="center"
	            	android:padding = "10dip"
	           		android:visibility = "gone"
	           		>
	            
					<ImageView 
						android:id = "@+id/closed_sign"
						android:src = "@drawable/closed_sign"
				   		android:layout_width="wrap_content"
				   		android:layout_height="wrap_content"
				   		/>
				   
				    <TextView 
						android:background = "@drawable/empty_sign_yellow"
						android:layout_width = "wrap_content"
						android:layout_height = "wrap_content"
						android:text = "@string/closed"
						android:gravity="center"
						android:textSize = "16dip"
						android:textStyle="bold"
						android:textColor="#000000"
						android:padding = "5dp" 
						/>
				</LinearLayout>
				
	        <LinearLayout
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal"
	            android:layout_margin="5dp"
	            android:gravity="center"
	            >
			
	<Button
		    android:id="@+id/show_map"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:drawableTop="@drawable/icon_maps"
	        android:text="@string/map"
	        android:textSize="12sp" />
	<Button
		    android:id="@+id/show_google_maps"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:drawableTop="@drawable/icon_show_map"
	        android:text="@string/google_maps"
	        android:textSize="12sp" />
	<Button
		    android:id="@+id/navigate"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:drawableTop="@drawable/icon_navigation"
	        android:text="@string/navigate_to"
	        android:textSize="12sp"/>
	       </LinearLayout> 
	       
	 	<TextView
			android:id = "@+id/address" 
			android:layout_width = "wrap_content"
			android:layout_height = "wrap_content" 
			android:textSize = "15sp"
			android:padding = "5dp" 
			android:textColor="#000000"
		/>
		
		 <TextView 
			android:id = "@+id/cc" 
			android:layout_width = "wrap_content"
			android:layout_height = "wrap_content" 
			android:textSize = "15sp"
			android:padding = "5dp" 
			android:textColor="#000000"
		/>
		
		<TextView 
			android:id = "@+id/special" 
			android:layout_width = "wrap_content"
			android:layout_height = "wrap_content" 
			android:textSize = "15sp"
			android:padding = "5dp"
			android:textColor="#000000"
		/>
		</LinearLayout>
	</ScrollView>
</LinearLayout>